--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,61 @@ body {
     border: 2px solid #ffffff;
     padding-left: 20px
   }
+
+  .container {  
+    grid-template-columns: 1.1fr 0.9fr 1fr 1fr 1fr 1fr 1fr 1fr 0.6fr 1.4fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "section1 section1 section1 section2 section2 section2 section3 section3 section3 section4 section4 section4"
+      "section5 section5 section5 section5 section5 section5 section6 section6 section6 section6 section6 section6"
+      /*"section5 section5 section5 section5 section5 section5 section6 section6 section6 section6 section6 section6"*/
+      "section7 section7 section8 section8 section9 section9 section10 section10 section11 section11 section12 section12"
+      "section13 section13 section13 section13 section13 section13 section14 section14 section14 section14 section14 .";
+  }
+
+  .section1 { grid-area: section1; }
+
+  .section2 { grid-area: section2; }
+
+  .section3 { grid-area: section3; }
+
+  .section4 { grid-area: section4; }
+
+  .section5 { grid-area: section5; }
+
+  .section6 { grid-area: section6; }
+
+  .section7 { grid-area: section7; }
+
+  .section8 { grid-area: section8; }
+
+  .section9 { grid-area: section9; }
+
+  .section10 { grid-area: section10; }
+
+  .section11 { grid-area: section11; }
+
+  .section12 { grid-area: section12; }
+
+  .section13 { grid-area: section13; }
+
+  .section14 { grid-area: section14; }
+
+  @media (max-width: 768px) { /* Mobile e Tablet */
+    .container {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+      grid-template-areas:
+        "section1 section2"
+        "section3 section4"
+        "section5 section5"
+        "section6 section6"
+        "section7 section8"
+        "section9 section10"
+        "section11 section12"
+        "section13 section14"
+      ;
+    }
+  }
